whitespace and fix nav

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,8 +52,6 @@ header {
     flex-direction: row;
     position: relative;
     z-index: 10000;
-
-
 }
 
 .menu li {
@@ -153,7 +151,7 @@ header {
 }
 
 /* responsiveness for mobile screens */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1200px) {
     header {
         position: relative;
         padding: 1.5em 2em;
